--- a/app/src/main/res/layout/setup_fragment.xml
+++ b/app/src/main/res/layout/setup_fragment.xml
@@ -36,24 +36,22 @@
             app:layout_constraintTop_toBottomOf="@+id/setup_teamA_label" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/editTextTeamAName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintBaseline_toBaselineOf="@+id/setup_teamA_label"
             app:layout_constraintStart_toEndOf="@+id/setup_teamA_label" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/editTextTeamBName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
             app:layout_constraintStart_toEndOf="@+id/textView2" />
 
