--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="grey">#c7c4bb</color>
     <color name="mustard">#dbaf2c</color>
     <color name="black">#3d3c3a</color>
+    <color name="blue">#71989B</color>
 </resources>
