--- a/app/src/main/res/layout/scoreboard_fragment.xml
+++ b/app/src/main/res/layout/scoreboard_fragment.xml
@@ -14,33 +14,37 @@
 
         <TextView
             android:id="@+id/team_B_Label"
+            style="@style/teamName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="16dp"
-            style="@style/teamName"
+            android:inputType="textCapWords"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.506"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="Boston Celtics" />
 
         <TextView
             android:id="@+id/team_A_label"
+            style="@style/teamName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="16dp"
-            style="@style/teamName"
+            android:inputType="textCapWords"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="Golden State Warriors" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -54,13 +58,13 @@
 
         <TextView
             android:id="@+id/team_A_score"
+            style="@style/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="65dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="16dp"
             android:text="@{scoreViewModel.teamAScore.toString()}"
-            style="@style/score"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/team_A_label"
@@ -68,13 +72,13 @@
 
         <TextView
             android:id="@+id/team_B_score"
+            style="@style/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="65dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="16dp"
             android:text="@{scoreViewModel.teamBScore.toString()}"
-            style="@style/score"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/team_B_Label"
@@ -113,15 +117,15 @@
 
         <Button
             android:id="@+id/team_A_freethrow"
-            android:text="@string/free_throw_label"
             style="@style/pointsButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginEnd="100dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="30dp"
             android:onClick="@{() -> scoreViewModel.onTeamAFreethrow()}"
-            app:layout_constraintBottom_toTopOf="@+id/reset"
+            android:text="@string/free_throw_label"
+            app:layout_constraintBottom_toTopOf="@+id/end"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/team_A_2pts" />
@@ -162,27 +166,44 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginEnd="100dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="30dp"
             android:onClick="@{() -> scoreViewModel.onTeamBFreethrow()}"
             android:text="@string/free_throw_label"
-            app:layout_constraintBottom_toTopOf="@+id/reset"
+            app:layout_constraintBottom_toTopOf="@+id/end"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/team_B_2pts" />
 
         <Button
             android:id="@+id/reset"
-            style="@style/pointsButton"
+            style="@style/gameCtrlButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginEnd="100dp"
             android:layout_marginBottom="30dp"
+            android:background="@color/blue"
+            android:backgroundTint="@color/blue"
             android:onClick="@{() -> scoreViewModel.onReset()}"
             android:text="@string/reset"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/end"
+            style="@style/gameCtrlButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginEnd="100dp"
+            android:layout_marginBottom="30dp"
+            android:background="@color/blue"
+            android:backgroundTint="@color/blue"
+            android:text="@string/end"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
