--- a/app/src/main/res/layout/setup_fragment.xml
+++ b/app/src/main/res/layout/setup_fragment.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textCapSentences|textCapWords"
             app:layout_constraintBaseline_toBaselineOf="@+id/setup_teamA_label"
             app:layout_constraintStart_toEndOf="@+id/setup_teamA_label" />
 
@@ -51,20 +51,20 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textCapSentences|textCapWords"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
             app:layout_constraintStart_toEndOf="@+id/textView2" />
 
         <Button
             android:id="@+id/start"
             style="@style/pointsButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:text="@string/setup_start_btn"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.6" />
+            app:layout_constraintEnd_toEndOf="@+id/editTextTeamBName"
+            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTeamBName" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
