database dao and insert game to database

--- a/app/src/main/res/layout/scoreboard_fragment.xml
+++ b/app/src/main/res/layout/scoreboard_fragment.xml
@@ -201,6 +201,7 @@
             android:background="@color/blue"
             android:backgroundTint="@color/blue"
             android:text="@string/end"
+            android:onClick="@{() -> scoreViewModel.onEndGame()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2" />
