--- a/app/src/main/res/layout/fragment_game_history.xml
+++ b/app/src/main/res/layout/fragment_game_history.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="gameHistoryViewModel"
+            type="com.chibee.scoreboard.GameHistoryViewModel" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameHistoryFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/clear"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{gameHistoryViewModel.gamesString}" />
+    </ScrollView>
     <Button
         android:id="@+id/clear"
         android:layout_width="wrap_content"
@@ -15,8 +32,10 @@
         android:layout_marginStart="500dp"
         android:layout_marginBottom="100dp"
         android:text="@string/clear"
+        android:onClick="@{() -> gameHistoryViewModel.onClear()}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
 
