display game history list, adapter, recycleview

--- a/app/src/main/res/layout/fragment_game_history.xml
+++ b/app/src/main/res/layout/fragment_game_history.xml
@@ -13,18 +13,15 @@
     android:layout_height="match_parent"
     tools:context=".GameHistoryFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/game_hist_list"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toTopOf="@+id/clear"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{gameHistoryViewModel.gamesString}" />
-    </ScrollView>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
     <Button
         android:id="@+id/clear"
         android:layout_width="wrap_content"
