navigate to game detail

--- a/app/src/main/res/layout/game_row.xml
+++ b/app/src/main/res/layout/game_row.xml
@@ -7,11 +7,15 @@
         <variable
             name="game"
             type="com.chibee.scoreboard.database.Game"/>
+        <variable
+            name="clickListener"
+            type="com.chibee.scoreboard.GameListener"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> clickListener.onClick(game)}">
 
         <TextView
             android:id="@+id/game_hist_game_date"
